# ludus-helm

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  DEPLOY.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_cover_image_to_lab_templates.py  0003_add_ludus_servers_table.py
backend/app/: main.py
backend/app/api/: auth.py  events.py  invite.py  labs.py  ludus.py  ludus_ansible.py  ludus_groups.py  ludus_testing.py  sessions.py  settings.py  students.py
backend/app/core/: config.py  db.py  deps.py  encryption.py  limiter.py  security.py
backend/app/middleware/: __init__.py  csrf.py  logging.py
backend/app/models/: __init__.py  event.py  lab_template.py  ludus_server.py  session.py  student.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  event.py  invite.py  lab.py  ludus.py  session.py  settings.py  student.py
backend/app/services/: bootstrap.py  (+7 more)
backend/tests/: conftest.py  test_app_smoke.py  test_auth.py  test_config.py  test_db.py  test_encryption.py  test_events_api.py  test_invite.py  test_labs_api.py  test_ludus_ansible_api.py  test_ludus_client.py  test_ludus_discovery_api.py  test_ludus_groups_api.py  test_ludus_management_api.py  test_ludus_server_crud.py  test_ludus_testing_api.py  test_models.py  test_multi_server.py  test_provision.py  test_reset_cooldown.py  test_schemas.py  test_sessions_api.py  test_settings_api.py  test_students_api.py  test_students_csv_import.py  test_students_reset.py
(+51 files in other folders)
